[package]
name = "rp2040-hal"
version = "0.1.0"
authors = ["eolder <evanmolder@gmail.com>"]
edition = "2018"
homepage = "https://github.com/eolder/RP2040-hal"
description = "A Rust RP2040 HAL impl"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
